EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==07/06/2010==
Trevius: Fix to prevent a potential item loss bug.
Trevius: Fix for Nimbus Particle Effects to make them appear properly.
JJ: Added $oncursor as an export to the parser.

==06/24/2010==
Trevius: EVENT_CLICKDOOR should now always show the correct door ID from the $doorid export.
Trevius: Doors with IDs higher than 126 should now work.
Trevius: Added perm_effect and client fields to SpellEffect(effect, [duration, finish_delay, zone_wide, unk20, perm_effect, client]).

==06/23/2010==
KLS: Instances can use spawn conditions now, requires SQL change in required sql folder.  Also updating will wipe all current spawn condition variables so you'll want to make sure they're set in the new table. (ps instance_id=0 for base zones!)
KLS: Added expedition expire warning to dynamic zones that aren't LDoNs, requires conf change for SoF/SoD.

==06/22/2010==
gaeorn: replaced calls to rand() with calls to MakeRandomInt()

==06/20/2010==
KLS: Added command #maxskills to max your skills instead of having to #setskill everything for testing.
KLS: Implemented partial melee and spell runes.
KLS: Right click tome learning in sof/sod.
KLS: Adjusted AC; should now be more sensitive to changes in gear as well as implemented softcaps.

==06/19/2010==
Trevius: Stopped NPCs from sending an appearance packet for each WP they arrive at or depart from.

==06/18/2010==
Trevius: Nimbus particle effects now show correctly from spells/clickies.
Trevius: Removed the ability to stack the same Nimbus particle effect repeatedly.
Trevius: Existing Nimbus particle effects are now sent to players as they zone in.
Trevius: EVENT_SPAWN should work better for more quest commands now.  Please report any bugs/issues with this change.
Trevius: SoF/SoD/Live - Stand state appearances are now set in the spawn struct.

REQUIRED SQL:
utils/sql/svn/1548_nimbuseffect_required.sql

==06/16/2010==